Changes since version 1.2.0
---------------------------

- Fixed a bug in IceSSL that caused the error message "WRN unable
  to load certificate authorities" to be logged when no value
  was specified for the "path" attribute of <certauthority>.

- Added property Ice.Override.ConnectTimeout. See the manual for
  details.

- Fixed a rare deadlock in the object adapter, when a locator was
  used.

- Fixed a bug that could cause an abort if communicators were created
  and destroyed in rapid succession.

- Fixed transformdb to take separate arguments for specifying
  include paths. The option -I has been replaced with the options
  --include-old and --include-new.

- Added twoway-throttling to Glacier. See the descriptions of the
  properties Glacier.Router.Client.Throttle.Twoways and
  Glacier.Router.Server.Throttle.Twoways for details. To trace
  throttling, set the property Glacier.Router.Trace.Throttle.

- The properties Glacier.Router.Client.BatchSleepTime and
  Glacier.Router.Server.BatchSleepTime have been replaced with
  Glacier.Router.Client.SleepTime and Glacier.Router.Server.SleepTime.
  Please see the description of the properties in the manual for the
  new semantics of the sleep times.

- Added STL functors for partial proxy comparison:
  * ProxyIdentityLess
  * ProxyIdentityEqual
  * ProxyIdentityAndFacetLess
  * ProxyIdentityAndFacetEqual

- A DNSException could cause a deadlock. This has been fixed.

- Changed FD_SETSIZE under Windows to 1024. (The default permits only
  64 concurrent connections, which is too small for some applications.)

- The IcePatch server now ignores Ice exceptions in the update thread
  instead of terminating the update thread.

- Fixed a concurrency bug that could cause the IcePack registry to
  crash.

Changes since version 1.1.1
---------------------------

- Added a garbage collector for class graphs that form cycles. (See
  the C++ mapping chapter in the documentation for details.)
